creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/API_Transaction_Errors__b.object-meta.xml
<CustomObject>
    <label>API_Transaction_Errors</label>
    <pluralLabel>API_Transaction_Errors</pluralLabel>
</CustomObject>