creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>CreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>API_Transaction_Errors1</relationshipName>
    <type>Lookup</type>
</CustomField>