creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>