creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>