creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>RequestBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>