creditas-sf/force-app/main/default/objects/API_Transaction_Errors__b/fields/ReturnCode__c.field-meta.xml
<CustomField>
    <fullName>ReturnCode__c</fullName>
    <label>ReturnCode</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>